[package]
name = "gameplay_factory"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Unified entity factory for prefab-based gameplay systems"
license.workspace = true
repository.workspace = true
categories = ["game-development", "game-engines"]
keywords = ["gamedev", "bevy", "entity", "factory", "prefab"]

[dependencies]
bevy = { workspace = true }
amp_core = { path = "../amp_core" }
config_core = { path = "../config_core" }
serde = { workspace = true, features = ["derive"] }
ron = { workspace = true, optional = true }
glob = { workspace = true }
log = { workspace = true }
notify = { workspace = true, optional = true }
tokio = { workspace = true, features = ["test-util"], optional = true }
once_cell = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
crossbeam-utils = { workspace = true }
tokio = { workspace = true, features = ["macros", "test-util"] }
serial_test = { workspace = true }

[features]
default = ["ron"]
ron = ["dep:ron"]
hot-reload = ["dep:notify", "dep:tokio"]
# legacy_ron_loader removed: not needed in Bevy 0.16
