[package]
name = "gameplay_factory"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Unified entity factory for prefab-based gameplay systems"
license.workspace = true
repository.workspace = true
categories = ["game-development", "game-engines"]
keywords = ["gamedev", "bevy", "entity", "factory", "prefab"]

[lib]
# Re-enabled with proper macOS handling - see cfg(doctest) guards in code

[dependencies]
bevy = { workspace = true }
amp_core = { path = "../amp_core" }
amp_physics = { path = "../amp_physics" }
config_core = { path = "../config_core" }
serde = { workspace = true, features = ["derive"] }
ron = { workspace = true, optional = true }
glob = { workspace = true }
log = { workspace = true }
notify = { workspace = true, optional = true }
tokio = { workspace = true, features = ["test-util"], optional = true }
once_cell = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
crossbeam-utils = { workspace = true }
tokio = { workspace = true, features = ["macros", "test-util"] }
serial_test = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = ["ron", "rapier3d_030"]
ron = ["dep:ron"]
hot-reload = ["dep:notify", "dep:tokio"]
legacy_ron_loader = []

rapier3d_030 = ["amp_physics/rapier3d_030"]

[[example]]
name = "dsl_example"
path = "examples/dsl_example.rs"

[[test]]
name = "dsl_integration_test"
path = "tests/dsl_integration_test.rs"

[[bench]]
name = "factory_spawn"
path = "benches/factory_spawn.rs"
harness = false
